--- a/sinopse.html
+++ b/sinopse.html
@@ -15,17 +15,17 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="img/bolinha.png">
+    <link rel="icon" sizes="192x192" href="img/bolinha192.png">
     <meta name="theme-color" content="#F77F00">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Pau a Pixel Design Movies">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon-precomposed" href="img/bolinha.png">
+    <link rel="apple-touch-icon-precomposed" href="img/bolinha192.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="img/bolinha.png">
+    <meta name="msapplication-TileImage" content="img/bolinha192.png">
     <meta name="msapplication-TileColor" content="#F77F00">
 
     <script>
@@ -102,7 +102,7 @@
 <script src="js/vendor/jquery-3.4.1.min.js"></script>
 <script src="js/vendor/materialize.min.js"></script>
 <script src="js/main.js"></script>
-<script src="js/install.js"></script>
+pt>
 
 
 </body>
