--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta name="theme-color" content="#F77F00">
     <meta name="msapplication-navbutton-color" content="#F77F00">
 
-    <link rel="icon" sizes="128x128" href="img/bolinha128.png">
-    <link rel="icon" sizes="192x192" href="img/bolinha192.png">
-    <link rel="icon" sizes="256x256" href="img/bolinha256.png">
-    <link rel="icon" sizes="384x384" href="img/bolinha384.png">
-    <link rel="icon" sizes="512x512" href="img/bolinha512.png">
+    <link rel="icon" sizes="128x128" href="img/bolinha128.jpg">
+    <link rel="icon" sizes="192x192" href="img/bolinha192.jpg">
+    <link rel="icon" sizes="256x256" href="img/bolinha256.jpg">
+    <link rel="icon" sizes="384x384" href="img/bolinha384.jpg">
+    <link rel="icon" sizes="512x512" href="img/bolinha512.jpg">
     
     <meta name="msapplication-starturl" content="/index.html">
 
@@ -28,14 +28,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Pau a Pixel Design Movies">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" sizes="128x128" href="img/bolinha128.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="img/bolinha192.png">
-    <link rel="apple-touch-icon" sizes="256x256" href="img/bolinha256.png">
-    <link rel="apple-touch-icon" sizes="384x384" href="img/bolinha384.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="img/bolinha512.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="img/bolinha128.jpg">
+    <link rel="apple-touch-icon" sizes="192x192" href="img/bolinha192.jpg">
+    <link rel="apple-touch-icon" sizes="256x256" href="img/bolinha256.jpg">
+    <link rel="apple-touch-icon" sizes="384x384" href="img/bolinha384.jpg">
+    <link rel="apple-touch-icon" sizes="512x512" href="img/bolinha512.jpg">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="img/bolinha192.png">
+    <meta name="msapplication-TileImage" content="img/bolinha192.jpg">
     <meta name="msapplication-TileColor" content="#F77F00">
 
     <script>
