--- a/argumento.html
+++ b/argumento.html
@@ -14,22 +14,35 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="img/bolinha192.png">
+   <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Pau a Pixel Design Movies">
     <meta name="theme-color" content="#F77F00">
+    <meta name="msapplication-navbutton-color" content="#F77F00">
+
+    <link rel="icon" sizes="128x128" href="img/bolinha128.jpg">
+    <link rel="icon" sizes="192x192" href="img/bolinha192.jpg">
+    <link rel="icon" sizes="256x256" href="img/bolinha256.jpg">
+    <link rel="icon" sizes="384x384" href="img/bolinha384.jpg">
+    <link rel="icon" sizes="512x512" href="img/bolinha512.jpg">
+    
+    <meta name="msapplication-starturl" content="/index.html">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Pau a Pixel Design Movies">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon-precomposed" href="img/bolinha192.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="img/bolinha128.jpg">
+    <link rel="apple-touch-icon" sizes="192x192" href="img/bolinha192.jpg">
+    <link rel="apple-touch-icon" sizes="256x256" href="img/bolinha256.jpg">
+    <link rel="apple-touch-icon" sizes="384x384" href="img/bolinha384.jpg">
+    <link rel="apple-touch-icon" sizes="512x512" href="img/bolinha512.jpg">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="img/bolinha192.png">
+    <meta name="msapplication-TileImage" content="img/bolinha192.jpg">
     <meta name="msapplication-TileColor" content="#F77F00">
 
     <script>
-    if (window.location.protocol != "https:" && window.location.hostname == "patriciaestevestrindade.github.io")
+    if (window.location.protocol != "https:" && window.location.hostname == "pauapixel.github.io")
         window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
     </script>
 
