--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Pau a Pixel Design Movies</title>
-    <meta name="description" content="Produção Audiovisual">
+    <meta name="description" content="Pau a Pixel Design Movies">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+
     <link rel="stylesheet" href="css/main.css">
      
     <link rel="manifest" href="manifest.json">
