--- a/argumento.html
+++ b/argumento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Storyline</title>
+    <title>Argumento</title>
     <meta name="description" content="Pau a Pixel Design Movies">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -112,14 +112,12 @@
 
 </script>
 <script type="text/javascript" src="js/vendor/materialize.min.js"></script>
-<!--<script src="ckeditor/ckeditor.js"></script>
-<script>
-    CKEDITOR.replace( 'textarea1' );
-</script>-->
 <script src="js/vendor/jquery-3.4.1.min.js"></script>
 <script src="js/vendor/materialize.min.js"></script>
 <script src="js/main.js"></script>
-
+<script src="js/spa.js"></script>
+<script src="js/vendor/materialize-0.97.0.min.js"></script>
+<script src="js/vendor/jquery.min.js"></script>
 
 
 </body>
