--- a/sinopse.html
+++ b/sinopse.html
@@ -115,7 +115,10 @@
 <script src="js/vendor/jquery-3.4.1.min.js"></script>
 <script src="js/vendor/materialize.min.js"></script>
 <script src="js/main.js"></script>
-pt>
+<script src="js/spa.js"></script>
+<script src="js/vendor/materialize-0.97.0.min.js"></script>
+<script src="js/vendor/jquery.min.js"></script>
+
 
 
 </body>
