--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-br" Xmanifest="appcache.manifest">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -114,9 +114,10 @@
      });
    </script>
 <script src="js/vendor/jquery-3.4.1.min.js"></script>
+<script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/materialize.min.js"></script>
-<!--<script src="js/spa.js"></script>
-<script src="js/vendor/materialize-0.97.0.min.js"></script>-->
+<script src="js/spa.js"></script>
+<script src="js/vendor/materialize-0.97.0.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/install.js"></script>
 
