--- a/escaleta.html
+++ b/escaleta.html
@@ -122,17 +122,17 @@
 
 
 </main>
-
+<script src="js/vendor/jquery.min.js"></script>
 </div><!--/.current-page-->
 
 </script>
 <script type="text/javascript" src="js/vendor/materialize.min.js"></script>
 <script src="js/vendor/jquery-3.4.1.min.js"></script>
-<script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/materialize.min.js"></script>
 <script src="js/spa.js"></script>
 <script src="js/vendor/materialize-0.97.0.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/install.js"></script>
 
 
 
