--- a/argumento.html
+++ b/argumento.html
@@ -118,7 +118,7 @@
 <script src="js/spa.js"></script>
 <script src="js/vendor/materialize-0.97.0.min.js"></script>
 <script src="js/vendor/jquery.min.js"></script>
-
+<script src="js/install.js"></script>
 
 </body>
 </html>
