--- a/escaleta.html
+++ b/escaleta.html
@@ -79,7 +79,7 @@
     </div>
 
 
-   <div class="row card-panel" id ="divContent">
+   <div class="row card-panel" id ="divContent" class='content>
     
    		    <div class="row">
             <div class="col s12 m5">
