--- a/escaleta.html
+++ b/escaleta.html
@@ -78,9 +78,10 @@
         </div>
     </div>
 
-  <div id ="divContent" class='content'>
-   <div class="row card-panel">
-    
+  
+  <div class="row card-panel">
+  
+  <div id="moda" class="section">  
    		    <div class="row">
             <div class="col s12 m5">
             <div class="card-panel teal">
