--- a/escaleta.html
+++ b/escaleta.html
@@ -80,13 +80,22 @@
 
   
   <div class="row card-panel">
-  
-  
+    
    		    <div class="row">
-            <div class="col s12 m5">
+            <div class="col s12">
             <div class="card-panel teal">
             <span class="white-text" > O que é Lorem Ipsum?
-                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. 
+            </span>
+            </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col s12">
+            <div class="card-panel teal">
+            <span class="white-text" > O que é Lorem Ipsum?
+                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. 
             </span>
             </div>
             </div>
