--- a/escaleta.html
+++ b/escaleta.html
@@ -93,7 +93,7 @@
 
           <div class="row">
             <div class="col s12">
-            <div class="card-panel teal">
+            <div class="card-panel pink darken-2">
             <span class="white-text" > O que é Lorem Ipsum?
                 Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. 
             </span>
