--- a/escaleta.html
+++ b/escaleta.html
@@ -83,46 +83,46 @@
     
 
    		<div class="row">
-            <div class="col s6 m6 13 center-align">
+            <div class="col s6 m6 l6 center-align">
                 <div class="card">
                 <div class="card-content teal">
-                    <span class="white-text" > O que é Lorem Ipsum?
+                    <span class="white-text" ><h6> O que é Lorem Ipsum?
                         Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos. 
-                    </span>
+                    </span></h6>
                 </div>
             </div>
             </div>
 
        
         <div class="row">
-            <div class="col s6 m6 13 center-align">
+            <div class="col s6 m6 l6 center-align">
                 <div class="card">
                 <div class="card-content  pink darken-2">
-                    <span class="white-text" > O que é Lorem Ipsum?
+                    <span class="white-text" ><h6> O que é Lorem Ipsum?
                         Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos. 
-                    </span>
+                    </span></h6>
                 </div>
             </div>
             </div>
 
         <div class="row">
-            <div class="col s6 m6 13 center-align">
+            <div class="col s6 m6 l6 center-align">
                 <div class="card">
                 <div class="card-content yellow accent-2">
-                    <span class="white-text" > O que é Lorem Ipsum?
+                    <span class="white-text" ><h6> O que é Lorem Ipsum?
                         Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos. 
-                    </span>
+                    </span></h6>
                 </div>
             </div>
             </div>
 
         <div class="row">
-            <div class="col s6 m6 13 center-align">
+            <div class="col s6 m6 l6 center-align">
                 <div class="card">
                 <div class="card-content teal">
-                    <span class="white-text" > O que é Lorem Ipsum?
+                    <span class="white-text" ><h6> O que é Lorem Ipsum?
                         Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos. 
-                    </span>
+                    </span></h6>
                 </div>
             </div>
             </div>
