--- a/sinopse.html
+++ b/sinopse.html
@@ -89,7 +89,7 @@
 
         <div class="row">
     		    <div class="input-field col s12">
-          		<textarea placeholder="Sinopse" id="textarea1" class="materialize-textarea"></textarea>
+          		<textarea placeholder="Sinopse" id="textarea1" class="materialize-textarea" data-length="2400"></textarea>
           		<label for="textarea1">Digite a Sinopse</label>
        		  </div>
           </div>
