--- a/storyline.html
+++ b/storyline.html
@@ -89,7 +89,7 @@
 
         <div class="row">
     		    <div class="input-field col s12">
-          		<textarea placeholder="Storyline" id="textarea1" class="materialize-textarea"></textarea>
+          		<textarea placeholder="Storyline" id="textarea1" class="materialize-textarea" data-length="450"></textarea>
           		<label for="textarea1">Digite seu Storyline</label>
        		  </div>
           </div>
